data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_740.wast
;; 1. **Test Description**: Evaluate a condition where the stack has fewer operands than required for the branch target label.    - **Constraint Checked**: Checks the stack underflow handling by the `checkTargetArgs` function.    - **Incorrect Condition Evaluation**: If the stack requirement is not correctly enforced, the `br` instruction might still execute incorrectly.

(assert_invalid
  (module (func (block (result i32)
    (i32.const 1)
    (br 0)
    (i32.add (i32.const 1) (i32.const 2))
  )))
  "type mismatch"
)